Fixed random horizontal scrolling in small devices.
Added image content in questions to be responsive

--- a/src/_CSS/bootstrap-extended.css
+++ b/src/_CSS/bootstrap-extended.css
@@ -2383,10 +2383,15 @@
 
 /********************************************/
 
+.scroll-x-auto * {
+    overflow-x: auto;
+    overflow-y: hidden;
+}
+
 /*Small devices (landscape phones, 576px and up)*/
 
 @media (min-width: 576px) {
-    .h-60vh-sm-scroll {
+    .h-60vh-sm-scroll * {
         height: 60vh;
         max-height: 60vh;
         overflow-y: auto;
@@ -2402,6 +2407,10 @@
         max-height: 60vh;
         overflow-y: auto;
 
+    }
+
+    .max-w-100-md * {
+        max-width: 100%;
     }
 }
 
